--- a/main.css
+++ b/main.css
@@ -133,6 +133,9 @@ body{
     word-wrap: break-word;
     transition: all ease 0.35s;
 }
+.blog--page.blog--card{
+    width: 100%;
+}
 .project--card:hover{
     border-color: var(--accent);
 }
@@ -170,6 +173,33 @@ body{
     font-size: 14px;
 }
 
+/* blog */
+.btn--dev{
+    color: white;
+    background-color: black;
+    border-radius: 4px;
+    font-size: 1.25rem;
+    padding: 4px 8px;
+}
+.blog--page.blog--card .project--desc{
+    position: relative;
+}
+/* fade out text */
+.blog--page.blog--card .project--desc::after{
+    content: '';
+    width: 100%;
+    left: 0;
+    background: linear-gradient(0deg, rgba(255,255,255,1) 35%, rgba(255,255,255,0.25) 100%);
+    height: 30px;
+    position: absolute;
+    bottom: 1px;
+}
+.code-box{
+    padding: 5px;
+    background-color: #fafafa;
+    border-radius: 4px;
+    border-left: 3px solid #ccc;
+}
 .blog--card .btn--primary{
     background-color: var(--accent);
     transition: all ease 0.35s;
